--- a/src/client/assets/stylesheets/index.css
+++ b/src/client/assets/stylesheets/index.css
@@ -21,7 +21,7 @@ body {
 }
 
 header {
-  background-image: url('https://via.placeholder.com/1150');
+  background-image: url('https://i.ibb.co/PZRYn7h/Cars-3.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
